After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 343861 - Window position and size aren´t remembered
Window position and size aren´t remembered
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: System-monitor maintainers
System-monitor maintainers
: 389468 (view as bug list)
Depends on: 390101
Blocks:
 
 
Reported: 2006-06-05 00:47 UTC by Michael Stather
Modified: 2011-11-18 23:33 UTC
See Also:
GNOME target: ---
GNOME version: 2.13/2.14


Attachments
Proposed patch (3.58 KB, patch)
2011-11-17 04:17 UTC, Robert Roth
none Details | Review

Description Michael Stather 2006-06-05 00:47:46 UTC
Please describe the problem:
When I close the system monitor and reopen it, the window position and size aren´t remembered.
The program should open at the position I closed it and with the dize it had.

Steps to reproduce:
1. 
2. 
3. 


Actual results:


Expected results:


Does this happen every time?


Other information:
Comment 1 Benoît Dejean 2006-06-05 10:07:25 UTC
which window manager are you using ?
Comment 2 Michael Stather 2006-06-05 12:18:42 UTC
I´m using metacity.
But I don´t understand why this could be related, afaik in GNOME there´s no API for this kind of things, so the application programmer has to take care of it. There are also many other apps which remember the size and position right.
Comment 3 Benoît Dejean 2006-11-13 13:48:10 UTC
Can you still reproduce ?
Comment 4 Michael Stather 2006-11-13 18:25:13 UTC
I don´t know, I´m not using gnome/linux at the moment.
But I think it´s really easy to test if this is still present in new gnome versions.
Comment 5 Peter Sääf 2006-12-17 23:09:07 UTC
Still present with system monitor 2.17.4. Tested with metacity and compiz.
Nautilus for example, saves this information in gconf. (/apps/nautilus/preferences/navigation_window_saved_geometry)
Comment 6 Benoît Dejean 2006-12-18 16:54:25 UTC
OK, i need eel for that. I'll see what i can do.
Comment 7 Benoît Dejean 2006-12-25 19:33:33 UTC
*** Bug 389468 has been marked as a duplicate of this bug. ***
Comment 8 Robert Roth 2011-11-17 04:17:59 UTC
Created attachment 201570 [details] [review]
Proposed patch

Window size is already saved in g_settings and loaded on start, so I have made a patch to also save the window position on exit and load it on start.
Comment 9 Chris Kühl 2011-11-18 23:33:45 UTC
Thanks. Patch applied to master.