Also remember the window position, not only the size.

https://bugzilla.gnome.org/show_bug.cgi?id=343861