src/procman.cpp
@@ -233,6 +233,9 @@ procman_data_new (GSettings *settings)
 
     pd->config.width = g_settings_get_int (settings, "width");
     pd->config.height = g_settings_get_int (settings, "height");
+    pd->config.xpos = g_settings_get_int (settings, "x-position");
+    pd->config.ypos = g_settings_get_int (settings, "y-position");
+
     pd->config.show_tree = g_settings_get_boolean (settings, "show-tree");
     g_signal_connect (G_OBJECT(settings), "changed::show-tree", G_CALLBACK(tree_changed_cb), pd);
 
@@ -498,9 +501,13 @@ procman_save_config (ProcData *data)
 
     data->config.width  = gdk_window_get_width (gtk_widget_get_window (data->app));
     data->config.height = gdk_window_get_height(gtk_widget_get_window (data->app));
+    gtk_window_get_position(GTK_WINDOW(data->app), &data->config.xpos, &data->config.ypos);
 
     g_settings_set_int (settings, "width", data->config.width);
     g_settings_set_int (settings, "height", data->config.height);
+    g_settings_set_int (settings, "x-position", data->config.xpos);
+    g_settings_set_int (settings, "y-position", data->config.ypos);
+
     g_settings_set_int (settings, "current-tab", data->config.current_tab);
 
     g_settings_sync ();
