src/procman.h
@@ -74,6 +74,8 @@ struct ProcConfig
 {
     gint            width;
     gint            height;
+    gint            xpos;
+    gint            ypos;
     gboolean        show_kill_warning;
     gboolean        show_tree;
     gboolean        show_all_fs;
